attached_assets/Pasted-WARNING-library-LiquidCrystal-I2C-claims-to-run-on-avr-architecture-s-and-may-be-incompatible-with-1756801862440_1756801862441.txt
WARNING: library LiquidCrystal I2C claims to run on avr architecture(s) and may be incompatible with your current board which runs on esp32 architecture(s).
D:\Yakin IoT\Skripsi\Skripsi.ino:647:6: error: redefinition of 'void tokenStatusCallback(TokenInfo)'
  647 | void tokenStatusCallback(TokenInfo info) {
      |      ^~~~~~~~~~~~~~~~~~~
In file included from D:\Yakin IoT\Skripsi\Skripsi.ino:9:
c:\Users\ASUS\Documents\Arduino\libraries\Firebase_Arduino_Client_Library_for_ESP8266_and_ESP32\src/addons/TokenHelper.h:79:6: note: 'void tokenStatusCallback(TokenInfo)' previously defined here
   79 | void tokenStatusCallback(TokenInfo info)
      |      ^~~~~~~~~~~~~~~~~~~
D:\Yakin IoT\Skripsi\Skripsi.ino: In function 'void tokenStatusCallback(TokenInfo)':
D:\Yakin IoT\Skripsi\Skripsi.ino:649:78: error: request for member 'c_str' in 'getTokenType(token_info_t(info))', which is of non-class type 'const char*'
  649 |     Serial.printf("Token info: type = %s, status = %s\n", getTokenType(info).c_str(), getTokenStatus(info).c_str());
      |                                                                              ^~~~~
D:\Yakin IoT\Skripsi\Skripsi.ino:649:108: error: request for member 'c_str' in 'getTokenStatus(token_info_t(info))', which is of non-class type 'const char*'
  649 |     Serial.printf("Token info: type = %s, status = %s\n", getTokenType(info).c_str(), getTokenStatus(info).c_str());
      |                                                                                                            ^~~~~
D:\Yakin IoT\Skripsi\Skripsi.ino:652:78: error: request for member 'c_str' in 'getTokenType(token_info_t(info))', which is of non-class type 'const char*'
  652 |     Serial.printf("Token info: type = %s, status = %s\n", getTokenType(info).c_str(), getTokenStatus(info).c_str());
      |                                                                              ^~~~~
D:\Yakin IoT\Skripsi\Skripsi.ino:652:108: error: request for member 'c_str' in 'getTokenStatus(token_info_t(info))', which is of non-class type 'const char*'
  652 |     Serial.printf("Token info: type = %s, status = %s\n", getTokenType(info).c_str(), getTokenStatus(info).c_str());
      |                                                                                                            ^~~~~
Multiple libraries were found for "SD.h"
  Used: C:\Users\ASUS\AppData\Local\Arduino15\packages\esp32\hardware\esp32\3.3.0\libraries\SD
  Not used: C:\Users\ASUS\AppData\Local\Arduino15\libraries\SD
exit status 1

Compilation error: redefinition of 'void tokenStatusCallback(TokenInfo)'